src/main/java/application/testData/invalidRandomAddresses/hard/completedIncorrectly/RandomAddressesWithThreeWrongRandomFieldsWithoutRelantionship.java
package application.testData.invalidRandomAddresses.hard.completedIncorrectly;

public class RandomAddressesWithThreeWrongRandomFieldsWithoutRelantionship {
}
